<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="setupStock">Bestand Einstellungen</string>
    <string name="confirmDateButton">Termin anlegen</string>
    <string name="dateTitle">Einkaufstitel</string>
    <string name="app_name">Ingredients</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_shopping">Einkaufslisten</string>
    <string name="title_activity_shoppingDateList">Terminübersicht</string>
    <string name="newIngredientAmountHint">Menge&#8230;</string>
    <string name="title_activity_shoppingDate">Termin anlegen</string>
    <string name="title_activity_shoppingListIngredient">Listenübersicht</string>
    <string name="menuCodeScanner">Barcodescanner</string>
    <string name="menuShoppingListScanner">Einkaufsliste einscannen</string>
    <string name="emptyList">Keine Einträge vorhanden</string>
    <string name="menuSetupShoppingDate">Termin</string>
    <string name="menuDeleteShoppingList">Einkaufliste löschen</string>
    <string name="menuCleanShoppingList">Einkaufliste aufräumen</string>
    <string name="changeShoppingDataPermissionLabel">Zugriff auf die Shopping-Daten</string>
    <string name="searchBarHint">Suche&#8230;</string>
    <string name="newIngredientButtonText">Zutat erstellen</string>
    <string name="showRecipesButtonText">Rezepte anzeigen</string>
    <string name="scanerror">Keine Ergebnisse gefunden</string>
    <string name="scansuccess">Übereinstimmung gefunden</string>
    <string name="scanfault">keine Übereinstimmung gefunden</string>
    <string name="ingredientCollector">Zutatenübersicht</string>
    <string name="menuInsertStoredItems">Bestand</string>
    <string name="showIngredientsButtonText">Zutaten anzeigen</string>
    <string name="title_activity_add_ingredient">Zutat hinzufügen</string>
    <string name="ingredientName">Bezeichnung: </string>
    <string name="ingredientUnit">Einheit: </string>
    <string name="addIngredients">Neue Zutat erstellen</string>
    <string name="ingredientAmount">"Menge: "</string>
    <string name="chooseUnit">Einheit auswählen</string>
    <string name="quantityPreviousDefaultNumber">0</string>
    <string name="quantityCurrentDefaultNumber">1</string>
    <string name="quantityNextDefaultNumber">2</string>
    <string name="changeShoppingDataPermissionDescription">Text</string>
    <string name="delteDateSure">Sind Sie sicher, dass Sie den Termin löschen wollen?</string>
    <string name="toastInsertNewShoppingDate">Feld Einkaufstitel muss gefüllt sein</string>
    <string name="deleteDateTitle">Löschen?</string>
    <string name="recipeCollector">Rezepteübersicht</string>
    <string name="noResultsFound">Keine Ergebnisse gefunden</string>
    <string name="developerMistake">Sorry - hier hat ein Entwickler gepfuscht!</string>
    <string name="dateTitleHint">Bezeichnung&#8230;</string>
    <string name="newIngredientHint">Name&#8230;</string>
    <string name="menuBackToMainPackage">Startseite</string>
    <string name="confirmShoppingListAdd">Eingabe bestätigen</string>
    <string name="ingredientInDatabase">Zutat schon vorhanden</string>
    <string name="addShoppingListDialog">Neue Einkaufsliste anlegen</string>
    <string name="eingabeShoppingListName">Bsp. ALDI</string>
	<string name="addedToStock">Zutat dem Bestand hinzugefügt</string>
    <string name="userInformFieldIsEmpty">Feld muss gefüllt sein</string>
    <string name="numberHaveToBeGreaterThanZero">Mengen kleiner als 1 sind nicht möglich!</string>
    <string name="ingredientOnServer">Die Zutat ist bereits auf dem Server vorhanden!</string>
    <string name="amountNeeded">Bitte Menge angeben!</string>
    <string name="nameNeeded">Bitte Bezeichnung angeben!</string>
    <string name="deleteShoppingListTitle">Einkaufsliste löschen?</string>
    <string name="deleteShoppingListSure">Sind Sie sicher, dass Sie die Einkaufsliste löschen wollen?</string>
    <string name="noNetworkConnection">Keine Netzwerkverbindung - Server nicht erreichbar</string>
    <string name="addIngredientToShoppingList">Zutat der Einkaufsliste hinzugefügt</string>
    <string name="addIngredientFromRecipeToShoppingList">Zutaten vom Rezept der Einkaufsliste hinzugefügt</string>
    <string name="addedIngredientAlsoOnServer">Zutat der Liste und dem Server hinzugefügt</string>
    <string name="addedIngredientOnListNotServer">Zutat der Liste hinzugefügt. Zutat aufgrund fehlender Verbindung nicht dem Server hinzugefügt</string>
	<string name="barcodeApiKeySetting">Apikey für eandata.com</string>
	<string name="enterAmountMoreThanNull">Die Menge muss größer 0 sein.</string>
    <string name="deleteButton">Löschen</string>
    <string name="noApiKey">Sie müssen in den Optionen im Hauptmenü erst einen gültigen ApiKey eingeben, um dieses Feature nutzen zu können!</string>
	
</resources>
