<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ingredient_collector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AbstractCollectorActivity" >

   

   

    <EditText
        android:id="@+id/searchBarInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜüöäß1234567890"
        android:hint="@string/searchBarHint"
        android:lines="1"
        android:scrollHorizontally="true" />

     
        
    <ListView
        android:id="@+id/elementsList"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        />
    <ProgressBar
        android:id="@+id/collectorProgressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:visibility="gone" 
        />
     <TextView
        android:id="@+id/noResultsFoundView"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:text="@string/noResultsFound"
        android:visibility="gone" />

    <Button
        android:id="@+id/changeCollectorButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/showRecipesButtonText" />

</LinearLayout>