<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/dateTitle"
            android:layout_width="104dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.37"
            android:ems="9"
            android:paddingRight="0dp"
            android:text="@string/dateTitle"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#000" />

        <EditText
            android:id="@+id/chooseDateTitle"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.39"
            android:background="#cfff"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜüöäß1234567890"
            android:ems="10"
            android:hint="@string/dateTitleHint"
            android:maxLength="30" />
    </LinearLayout>

    <DatePicker
        android:id="@+id/calendarView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:calendarViewShown="false" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/confirmButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/confirmDateButton"
        android:textColor="#000" />

</LinearLayout>