<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_ingredient_collector"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AbstractCollectorActivity" >

    <EditText
        android:id="@+id/searchBarInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:digits=" abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZÄÖÜüöäß1234567890"
        android:hint="@string/searchBarHint"
        android:lines="1"
        android:scrollHorizontally="true"
        android:textColor="#000" />

    <Button
        android:id="@+id/changeCollectorButton"
        android:layout_width="fill_parent"
        android:layout_height="48dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="3dp"
        android:background="#cfff"
        android:text="@string/showIngredientsButtonText"
        android:textColor="#000" />

    <TextView
        android:id="@+id/noResultsFoundView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/changeCollectorButton"
        android:layout_below="@id/searchBarInput"
        android:background="#cfff"
        android:text="@string/noResultsFound"
        android:textColor="#000"
        android:visibility="gone" />

    <ListView
        android:id="@+id/elementsList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/changeCollectorButton"
        android:layout_below="@id/searchBarInput"
        android:background="#cFFF" />

    <ProgressBar
        android:id="@+id/collectorProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateDrawable="@drawable/custom_progressbar"
        android:visibility="gone" />

</RelativeLayout>